--- a/index.html
+++ b/index.html
@@ -15,17 +15,18 @@
     }
  
     .image-container {
-      width: 100%;
-      height: 100%;
+      width: 1800px; /* 横幅を1800pxに設定 */
+      height: 900px; /* 高さを900pxに設定 */
       display: flex;
       justify-content: center;
       align-items: center;
       background-color: #f0f0f0;
+      margin: 0 auto; /* 中央寄せ */
     }
  
     .mini-image {
-      max-width: 100%;
-      max-height: 100%;
+      max-width: 900px; /* 横幅を900pxに設定 */
+      max-height: 1800px; /* 高さを1800pxに設定 */
       object-fit: contain;
     }
   </style>
@@ -51,6 +52,7 @@
       img.src = miniImages[randomIndex];
     }
  
+    // ページ読み込み時に画像を表示
     window.onload = displayRandomImage;
   </script>
 </body>
